docs: add a main file that works only on overleaf
The most up-to-date compiler is not working for some reason (the template has a lot of bugs).

--- a/Papers/ERRC_24/main.tex
+++ b/Papers/ERRC_24/main.tex
@@ -1,26 +1,5 @@
-% Sample article using the sbc20 class.
-%
-% The non-textual content of this file (package loading commands,
-% explanatory comments, etc.) was created by Nelson Lago <lago@ime.usp.br>
-% and José Viterbo Filho <viterbo@ic.uff.br>. It is licensed under the
-% Creative Commons Attribution International Licence, v4.0 (CC-BY 4.0)
-% https://creativecommons.org/licenses/by/4.0/
-%
-% Using the non-textual content of this file as a template to produce
-% your own document without further attribution to the authors above
-% is permitted and encouraged.
-%
-% charset: utf-8 ãàáâéêíõóôúç ÃÀÁÂÉÊÍÕÓÔÚÇ
-
-% The last language is the main language of the document.
 \documentclass[english,notblind]{sbc20}
 
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% PACKAGES %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-% Basics
 \usepackage{verbatim}  % support for unformatted text, almost mandatory
 \usepackage{graphicx}  % support for figures etc., almost mandatory
 \usepackage{array}     % extra table features, almost mandatory
@@ -52,12 +31,6 @@
 %\usepackage{pdfcomment} % useful in the writing/reviewing phase
 
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% ARTICLE METADATA %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-% With bibLaTeX, the bibliographic databases are defined in the preamble.
-% Call \addbibresource multiple times to use more than one file.
 \addbibresource{bibliografia.bib}
 
 \metadata
@@ -75,15 +48,11 @@
     mainlanguagetitle={RouteBastion: Architecting a VRP API Broker},
   }
 
-% These are used in the headers and are optional; if not
-% defined, the complete title and all authors will appear
 \shortauthor{Vieira et al. 2024}
 \shorttitle{RouteBastion: Architecturing a VRP API Broker}
 
 \author
   {
-    % special chars in email addresses (%, _, $, &, #, ~ etc.)
-    % are ok if the whole address is within braces
     email=pietrovieira.aluno@unipampa.edu.br,
     orcid=0009-0004-0602-6567,
     institutionID=UNIPAMPA,
@@ -116,7 +85,7 @@
 \institution{FURG}{Universidade Federal do Rio Grande}
 
 
-\extraAffiliationsLast{José Viterbo is an Associate Professor at the Institute of Computing at UFF and Director of Publications at SBC. Nelson Lago is a researcher at the Center for Competence in Free Software at USP and at the School of Arts, Sciences and Humanities at UPa. Raphael Malinski Vieira is a student of the Bachelor's degree in Computer Science at UFRGS. Lisandro Granville is a Full Professor at the Institute of Informatics at UFRGS and Financial Director of SBC.}
+\extraAffiliationsLast{Pietro Vieira is a student at the Graduate Program in Software Engineering at UNIPAMPA. Bruno Dalmazo is a assistant professor at FURG. Rodrigo Mansilha is the coordinator of the Graduate Program in Software Engineering and a professor at UNIPAMPA.}
 
 \abstract
   {
@@ -128,16 +97,15 @@
 \palavraschave{Problema de Roteamento de Veículos \sep PRV \sep Arquitetura de Software \sep Software como Serviço}
 
 
+\contributeinfo{ }
 
-\contributeinfo{}
+\acknowledgements{ }
 
-\acknowledgements{}
+\funding{ }
 
-\funding{}
+\datainfo{ }
 
-\datainfo{}
-
-\furtherinfo{}
+\furtherinfo{ }
 
 \SBCprintbibliography
 
@@ -154,34 +122,34 @@ To address this complexity, many large-scale technology companies have developed
 
 In this context, selecting the most appropriate API is not a trivial task. The need for flexibility and customization across varying use cases—whether for optimizing cost, increasing input size, or adapting to specific business constraints—complicates the decision further. Enterprises may find themselves limited by the features or pricing structures of a single API, or they may need to constantly switch between services to best suit different routing scenarios.
 
-This paper introduces RouteBastion, a Software as a Service (SaaS) solution designed to solve this problem by unifying multiple Vehicle Routing Problem APIs into a single platform. RouteBastion abstracts the complexity of comparing and integrating different APIs by providing a seamless, centralized service where users can dynamically select the most suitable API for their needs. The platform’s architecture is built on principles of modularity and scalability, ensuring that it can accommodate the constantly evolving landscape of route optimization services. This SaaS platform offers more than just API aggregation; it incorporates intelligent decision-making mechanisms, allowing users to optimize route planning not only based on individual API strengths but also on real-time operational requirements, such as route complexity, input size, or pricing considerations.
+This paper introduces RouteBastion, a Software as a Service (SaaS) solution designed to solve this problem by unifying multiple Vehicle Routing Problem APIs into a single platform. RouteBastion abstracts the complexity of comparing and integrating different APIs by providing a seamless, centralized service where users can dynamically select the most suitable API for their needs. The platform’s architecture is built on principles of modularity and scalability, ensuring that it can accommodate the constantly evolving landscape of route optimization services. This SaaS platform will offer more than just API aggregation; it will incorporate intelligent decision-making mechanisms, allowing users to optimize route planning not only based on individual API strengths but also on real-time operational requirements, such as route complexity, input size, or pricing considerations.
 
-The remainder of this paper will explore the architectural design of RouteBastion, discussing its structure, core decision-making algorithms, integration strategies with third-party APIs, and the performance considerations that make it a robust solution for industrial-grade VRP optimization.
+The remainder of this paper will explore the architectural design of RouteBastion, discussing its structure and the performance considerations that will make it a robust solution for industrial-grade VRP optimization.
 
 \section{Theoretical framework}
 \label{sec:theoretical_framework}
 
-This section outlines the foundational concepts and technologies that underpin the design and implementation of RouteBastion. Specifically, it covers the C4 model for software architecture, the Go programming language, and the REST architectural pattern.
+This section outlines the foundational concepts and technologies that underpin the design and implementation of RouteBastion. Specifically, it covers the C4 model for software architecture, the Go programming language, the REST architectural pattern and the gRPC open-source RPC framework.
 
 \subsection{C4 Model for Software Architecture}
 \label{subsec:c4_model_for_software_architecture}
-The C4 model is a widely used approach for visualizing and documenting software architecture at multiple levels of abstraction. Introduced by Simon Brown, C4 stands for Context, Container, Component, and Code, which are the four levels of diagrams used to describe software systems. The model helps architects and developers break down complex systems into understandable parts by starting with a high-level overview (context) and progressively drilling down into more detailed views (containers, components, and code). This hierarchical structure enables clear communication among stakeholders, making it easier to reason about the design and behavior of the system. In RouteBastion, the C4 model is used to depict both the overall system interaction (context) and the internal architecture of the broker (container), offering a clear understanding of how external software systems, cloud providers, and internal components interact.
+The C4 model \cite{c4model} is a widely used approach for visualizing and documenting software architecture at multiple levels of abstraction. Introduced by Simon Brown, C4 stands for Context, Container, Component, and Code, which are the four levels of diagrams used to describe software systems. The model helps architects and developers break down complex systems into understandable parts by starting with a high-level overview (context) and progressively drilling down into more detailed views (containers, components, and code). This hierarchical structure enables clear communication among stakeholders, making it easier to reason about the design and behavior of the system. In RouteBastion, the C4 model is used to depict both the overall system interaction (context) and the internal architecture of the broker (container), offering a clear understanding of how external software systems, cloud providers, and internal components interact.
 
 \subsection{Go Programming Language (Golang)}
 \label{subsec:go_programming_language}
-Go, often referred to as Golang, is an open-source programming language designed by Google with a focus on simplicity, performance, and scalability. Its statically typed nature, coupled with a rich set of built-in features like concurrency via goroutines, makes it highly suitable for building distributed and scalable systems. Go’s efficient memory management and ability to handle multiple tasks concurrently make it an excellent choice for backend services that need to manage numerous simultaneous connections, such as API gateways. In RouteBastion, Go is used to implement the Broker API, providing the scalability and performance required to handle large volumes of route optimization requests from external systems while ensuring minimal latency in selecting the appropriate cloud provider for each request.
+Go \cite{gopl}, often referred to as Golang, is an open-source programming language designed by Google with a focus on simplicity, performance, and scalability. Its statically typed nature, coupled with a rich set of built-in features like concurrency via goroutines, makes it highly suitable for building distributed and scalable systems. Go’s efficient memory management and ability to handle multiple tasks concurrently make it an excellent choice for backend services that need to manage numerous simultaneous connections, such as API gateways. In RouteBastion, Go will be used to implement the Broker API, providing the scalability and performance required to handle large volumes of route optimization requests from external systems while ensuring minimal latency in selecting the appropriate cloud provider for each request.
 
 \subsection{REST Architectural Pattern}
 \label{subsec:rest}
-The Representational State Transfer (REST) is a widely adopted architectural pattern for designing networked applications. It relies on stateless communication and well-defined methods (GET, POST, PUT, DELETE) to facilitate interactions between clients and servers. RESTful APIs are lightweight, making them an ideal choice for web services that need to handle a large number of requests efficiently. RouteBastion leverages the REST pattern to expose its Broker API, enabling external systems to interact with it through simple HTTP requests. By following REST principles, RouteBastion ensures a decoupled and flexible system where each request is self-contained, allowing for easier scalability, load balancing, and integration with different systems.
-
-These three foundational elements — the C4 model, Go programming language, and REST architecture — provide the basis for the design and operational efficiency of RouteBastion. Each plays a crucial role in ensuring that the system is well-architected, scalable, and efficient.
+The Representational State Transfer (REST) is a widely adopted architectural pattern for designing networked applications. It relies on stateless communication and well-defined methods (GET, POST, PUT, DELETE) to facilitate interactions between clients and servers. RESTful APIs are lightweight, making them an ideal choice for web services that need to handle a large number of requests efficiently. RouteBastion will leverage the REST pattern to expose its Broker API, enabling external systems to interact with it through simple HTTP requests. By following REST principles, RouteBastion will ensure a decoupled and flexible system where each request is self-contained, allowing for easier scalability, load balancing, and integration with different systems.
 
 \subsection{gRPC}
 \label{subsec:grpc}
-gRPC (Google Remote Procedure Call) is a high-performance, open-source RPC framework designed for efficient communication between distributed systems. It uses Protocol Buffers (Protobuf) for serializing structured data, which reduces payload sizes and improves communication speed compared to traditional REST APIs, which often rely on JSON. One of gRPC's core advantages is its ability to support bi-directional streaming, allowing both clients and servers to continuously exchange data over a single connection, making it ideal for real-time communication in highly responsive systems.
+gRPC (Google Remote Procedure Call) \cite{grpc} is a high-performance, open-source RPC framework designed for efficient communication between distributed systems. It uses Protocol Buffers (Protobuf) for serializing structured data, which reduces payload sizes and improves communication speed compared to traditional REST APIs, which often rely on JSON. One of gRPC's core advantages is its ability to support bi-directional streaming, allowing both clients and servers to continuously exchange data over a single connection, making it ideal for real-time communication in highly responsive systems.
 
-In the context of RouteBastion, gRPC offers a more efficient communication layer for internal service-to-service interactions, particularly between the Broker API and cloud providers. By leveraging gRPC's compact message format and fast processing capabilities, RouteBastion can handle larger optimization workloads with lower latency, providing faster responses and better performance for route optimization queries. While REST is a practical choice for external communication, gRPC's efficiency makes it a strong candidate for optimizing internal operations, especially when dealing with high volumes of route data and cloud provider requests.
+In the context of RouteBastion, gRPC offers a more efficient communication layer for internal service-to-service interactions, particularly between the Broker API and cloud providers. By leveraging gRPC's compact message format and fast processing capabilities, RouteBastion can handle larger optimization workloads with lower latency, providing faster responses and better performance for route optimization queries. While REST is a practical choice for external communication, gRPC's efficiency makes it a strong candidate for optimizing internal operations, especially when dealing with high volumes of route data and cloud provider requests. It's important to note that RouteBastion will expose not only a REST API but will also expose a gRPC protocol to client systems, allowing them to take advantage of the great capabilities of gRPC too.
+
+These four foundational elements — the C4 model, Go programming language, REST architecture and gRPC — provide the basis for the design and operational efficiency of RouteBastion. Each plays a crucial role in ensuring that the system is well-architected, scalable, and efficient.
 
 \section{System Overview}
 \label{sec:system_overview}
@@ -189,7 +157,7 @@ RouteBastion is designed as an API gateway, enabling external systems to leverag
 
 \subsection{System Context}
 \label{subsec:system_context}
-In the system context diagram \ref{fig:system}, RouteBastion interacts with two main entities:
+In the system context diagram (\ref{fig:system}), RouteBastion interacts with two main entities:
 
 \begin{figure}
   \includegraphics[width=\columnwidth]{figures/c4_diagrams/System.png}
@@ -206,7 +174,7 @@ At the heart of this architecture is the RouteBastion Broker, which serves as th
 
 \subsection{Container Architecture}
 \label{subsec:container_architecture}
-The container diagram \ref{fig:container} delves deeper into the internal components of the RouteBastion Broker system, highlighting the service itself and databases that power the platform. The key components of the architecture include:
+The container diagram (\ref{fig:container}) delves deeper into the internal components of the RouteBastion Broker system, highlighting the service itself and databases that power the platform. The key components of the architecture include:
 
 \begin{figure}
   \includegraphics[width=\columnwidth]{figures/c4_diagrams/Container.png}
@@ -221,8 +189,6 @@ The container diagram \ref{fig:container} delves deeper into the internal compon
           \item Running a broker algorithm that dynamically selects the most cost-efficient cloud provider for each optimization task based on predefined criteria (e.g., input size, cost).
         \end{itemize}
 
-        The Broker API is horizontally scalable, meaning that additional replicas can be deployed to handle increased loads, ensuring the system can process high volumes of route optimization requests simultaneously.
-
   \item Relational Database (PostgreSQL): This component stores persistent data, such as information about client applications (e.g., API tokens for authorization), usage statistics, and other metadata required for managing the system's operations.
 
   \item Key-Value Database (Redis): Redis is used to store in-memory data about running optimizations. It allows the system to quickly access real-time information, such as the current status of optimizations, which is essential for monitoring and querying the ongoing optimization processes.
@@ -230,27 +196,29 @@ The container diagram \ref{fig:container} delves deeper into the internal compon
   \item Cloud Providers: These are external services such as Google Cloud and Azure, which provide the actual optimization algorithms and computational power to solve the VRP. The Broker API schedules optimization jobs with these cloud providers and retrieves job statuses, allowing it to present the results back to the external software systems.
 \end{itemize}
 
+The Broker API is horizontally scalable, meaning that additional replicas can be deployed to handle increased loads, ensuring the system can process high volumes of route optimization requests simultaneously.
+
 \section{Architectural Highlights}
 \label{sec:architectural_highlights}
 The architecture of RouteBastion is designed for modularity and scalability, utilizing containerized services to enable horizontal scaling and efficiently handle high traffic from external systems. The stateless Broker API ensures seamless scaling by offloading state management to Redis and PostgreSQL, which store real-time data and persistent information, respectively. A key feature of the architecture is its intelligent API selection, where the broker algorithm dynamically chooses the most cost-effective or suitable cloud provider for each optimization request, optimizing for both cost and performance. The use of Redis for in-memory data storage ensures low-latency access to ongoing optimization statuses, enabling real-time performance and rapid response to status queries. Overall, this architecture provides a robust, flexible, and efficient foundation for managing complex route optimizations across multiple cloud providers.
 
-
-
 \section{Conclusion}
+In conclusion, the architecture of RouteBastion is designed to provide an efficient and scalable solution for optimizing vehicle routing through the integration of various cloud-based APIs. By leveraging the C4 model for clear architectural visualization, the Go programming language for high-performance service execution, and REST for flexible external communication, RouteBastion ensures that users can seamlessly choose and interact with the most cost-effective and capable cloud provider for their routing needs. Additionally, the potential use of gRPC for internal communication further enhances system performance, allowing the platform to handle large-scale route optimization tasks with minimal latency. This thoughtful combination of technologies positions RouteBastion as a robust and future-proof SaaS offering in the vehicle routing domain.
 
-\begin{itemize}
-  \item @Book: \cite{Knuth:96}.
+% \begin{itemize}
+%   \item @Book: \cite{Knuth:96}.
 
-  \item @Article (em periódico): \cite{floats2014}.
+%   \item @Article (em periódico): \cite{floats2014}.
 
-  \item @InProceedings (ou @Conference): \cite{alves03:simi}.
+%   \item @InProceedings (ou @Conference): \cite{alves03:simi}.
 
-  \item @InCollection (capítulo de livro ou coletânea): \cite{bobaoglu93:concepts}.
+%   \item @InCollection (capítulo de livro ou coletânea): \cite{bobaoglu93:concepts}.
 
-  \item @Misc: \cite{gridftp}.
+%   \item @Misc: \cite{gridftp}.
 
-  \item @article (para referência a página web): \cite{alon09:how}.
+%   \item @article (para referência a página web): \cite{alon09:how}.
 
-\end{itemize}
+% \end{itemize}
+
 
 \end{document}
